	  (2013-8-10).
	* arch/arm/src/stm32/Kconfig and stm32_serial.c:  Added option to
	  disable serial port reordering.  From Lorenz Meier (2013-8-10).
	* arch/arm/src/sama5/Kconfig, sam_ohci.c, and
	  arch/arm/src/sama5/sam_clockconfig.c:  Add a OHCI driver for the SAMA5.
	  Untested on initial check-in (2013-8-11).
	* include/nuttx/usb/usbhost.h, arch/arm/src/stm32, arch/arm/src/lpc17xx,
	  and include/nuttx/usb/usbhost.h, and nuttx/configs/<stm32-boards>:
	  Move prototype of usbhost_initialize() of usbhost.h and into
	  architecture specific files.  This is necessasrybecause some chips
	  (like the SAMA5) have multiple, different USB host interfaces
	  (2013-8-11).
	* drivers/usbhost/usbhost_hidkbd.c and usbhost_storage.c:  Correct some
	  compilation errors when pre-allocated class structures are used.  Also
	  eliminate some warnings about uninitialized variables (2013-8-11).
	* configs/sama5d3x-ek/src/sam_usb.c and related files:  Add support for
	  initialization of the USB host and mass storage class device (2013-8-11).
	* arch/arm/src/sama5/sam_ohci.c and sam_usbhost.h (was sam_ohci.h), and
	  configs/sama5d3x-ek/src/sam_usb.c, and sama5d3x-ek.h:  Add controls
	  to enable VBUS power in OHCI host most (2013-8-12).
	* includes/nuttx/usb/usbhost.h, all USB host drivers in arch/, and all
	  USB host-side connection monitoring threads in configs/*/src:  The
	  SAMA5 has three downstream ports; all of the other USB host
	  implementations have only one.  This will require significant changes
	  to the USB host interfaces starting with these chnages to monitor
	  connections on a port-by-port basis.  This effects a lot of files and
	  more changes are coming for this issues.  Changes are being blindly
	  incorporated into other architrectures.  I am being careful to avoid
	  breakage, but I expect some (2013-8-12).
	* configs/olimex-stm32-p107/nsh/defconfig and appconfig:  Converted to
	  use the kconfig-frontends tool. From Max Holtzberg (2013-8-12).
