@@ -208,6 +208,7 @@ struct usbhost_state_s
   volatile bool           open;         /* TRUE: The keyboard device is open */
   volatile bool           waiting;      /* TRUE: waiting for keyboard data */
   uint8_t                 ifno;         /* Interface number */
+  uint8_t                 funcaddr;     /* USB function address */
   int16_t                 crefs;        /* Reference count on the driver instance */
   sem_t                   exclsem;      /* Used to maintain mutual exclusive access */
   sem_t                   waitsem;      /* Used to wait for keyboard data */
@@ -797,7 +798,7 @@ static void usbhost_destroy(FAR void *arg)
 
   /* Disconnect the USB host device */
 
-  DRVR_DISCONNECT(priv->drvr);
+  DRVR_DISCONNECT(priv->drvr, priv->funcaddr);
 
   /* And free the class instance.  Hmmm.. this may execute on the worker
    * thread and the work structure is part of what is getting freed.  That
@@ -1891,6 +1892,15 @@ static int usbhost_connect(FAR struct usbhost_class_s *class,
       if (ret != OK)
         {
           udbg("usbhost_devinit() failed: %d\n", ret);
+        }
+      else
+        {
+          /* Save the function address (We will need it when we disconnect).
+           * NOTE that address is available in the endpoint structures as
+           * well.
+           */
+
+          priv->funcaddr = funcaddr;
         }
     }
 
